force-app/main/default/objects/SurveyResponses__c/SurveyResponses__c.object-meta.xml
<CustomObject>
    <label>Resposta de Pesquisa</label>
    <nameField>
        <displayFormat>RP-{00000}</displayFormat>
        <label>Número de Resposta de Pesquisa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respostas de Pesquisas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>