force-app/main/default/objects/SurveyResponses__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Respostas de Pesquisas (Conta)</relationshipLabel>
    <relationshipName>Respostas_de_Pesquisas</relationshipName>
    <type>Lookup</type>
</CustomField>