force-app/main/default/objects/SurveyResponses__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Respostas de Pesquisas (Caso)</relationshipLabel>
    <relationshipName>RespostasdePesquisas</relationshipName>
    <type>Lookup</type>
</CustomField>