force-app/main/default/objects/SurveyResponses__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Respostas de Pesquisas</relationshipLabel>
    <relationshipName>RespostasdePesquisas</relationshipName>
    <type>Lookup</type>
</CustomField>