force-app/main/default/objects/SurveyResponses__c/fields/ExperienceEvaluation__c.field-meta.xml
<CustomField>
    <fullName>ExperienceEvaluation__c</fullName>
    <label>Como foi sua experiência</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>