force-app/main/default/objects/SurveyResponses__c/fields/ProblemSolved__c.field-meta.xml
<CustomField>
    <fullName>ProblemSolved__c</fullName>
    <label>Seu Problema foi Resolvido</label>
    <type>TextArea</type>
</CustomField>