force-app/main/default/objects/SurveyResponses__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Tipo de Registro</label>
    <type>TextArea</type>
</CustomField>