force-app/main/default/objects/SurveyResponses__c/fields/ServiceEvaluation__c.field-meta.xml
<CustomField>
    <fullName>ServiceEvaluation__c</fullName>
    <label>Como você avalia seu atendimento</label>
    <type>TextArea</type>
</CustomField>