force-app/main/default/objects/SurveyResponses__c/recordTypes/Key_Logistics_Offboarding.recordType-meta.xml
<RecordType>
    <fullName>Key_Logistics_Offboarding</fullName>
    <active>true</active>
    <label>Key Logistics - Offboarding</label>
</RecordType>